added animated gifs for cat and mouse characters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,14 @@ margin-top: 2rem;
 }
 .mouse {
     background-color:#3baff7;
+    background-image: url('../images/mouse-right.gif');
+    background-size: cover;
 }
 .cat {
     background-color: #f73b3b;
+    background-image: url('../images/cat-right.gif');
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .cheese {
     background-color:#ede911;
