--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,8 @@ margin-top: 2rem;
 }
 /******* Game Assets *******/
 .obstacle {
-    background-color: #4b4c4d;  
+    background-color: #4b4c4d; 
+    border-radius: 5px; 
 }
 .empty {
     /* background-color: #d1d6de; */
@@ -36,12 +37,25 @@ margin-top: 2rem;
     background-image: url('../images/mouse-right.gif');
     background-size: cover;
 }
+.mouse-left {
+    background-color:#3baff7;
+    background-image: url('../images/mouse-left.gif');
+    background-size: cover;
+}
+
 .cat {
     background-color: #f73b3b;
     background-image: url('../images/cat-right.gif');
     background-position: center;
     background-repeat: no-repeat;
 }
+.cat-left {
+    background-color: #f73b3b;
+    background-image: url('../images/cat-left.gif');
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 .cheese {
     background-color:#ede911;
 }
