cleaned up google font @import statement. Only one font now imported

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* font */
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Luckiest+Guy&family=Otomanopee+One&family=Press+Start+2P&family=Yomogi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
 
 /******* General Classes *******/
 body{
