adjusted default css font syling for button elements so font matches with site font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@ body{
     display: flex;
     flex-direction: column;
 }
+button {
+    font-family: 'Otomanopee One', sans-serif; 
+}
 header{
     background-color: #892E3D;
 }
