--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,10 @@ a.btn-nav {
     justify-content: center;
     width: 2rem;
 }
+button.btn-nav{
+    height: 2.25rem;
+    width: 2.25rem;
+}
 .btn-nav:hover,
 .btn-nav:focus {
     color:black;
