fixed sizing issue of buttons on end game modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,7 +215,7 @@ a.btn-nav {
     justify-content: center;
     width: 2rem;
 }
-button.btn-nav{
+#restart{
     height: 2.25rem;
     width: 2.25rem;
 }
